--- a/mnist/mnist.ipynb
+++ b/mnist/mnist.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-29 02:51:47.409615: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-07-29 02:51:47.470975: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-07-29 02:51:47.897409: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-07-29 02:51:47.900036: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-07-29 02:51:49.118228: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import tensorflow as tf \n",
@@ -18,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_x = train_x.values.reshape(-1, 28, 28, 1)\n",
-    "check_x = check_x.values.reshape(-1, 28, 28, 1)"
+    "check_x = check_x.values.reshape(-1, 28, 28, 1)\n",
+    "\n",
+    "test_data = test_data.values.reshape(-1, 28, 28, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +93,7 @@
        "(33600, 28, 28, 1)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,9 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-29 02:51:54.202543: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:268] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.layers import Dense, Dropout, Conv2D, MaxPooling2D, Flatten\n",
     "\n",
@@ -108,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +154,7 @@
        "(33600, 10)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,23 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "210/210 [==============================] - 4s 19ms/step - loss: 0.5055 - categorical_accuracy: 0.8576 - val_loss: 0.2405 - val_categorical_accuracy: 0.9305\n",
+      "Epoch 1/20\n",
+      "210/210 [==============================] - 4s 16ms/step - loss: 0.4887 - categorical_accuracy: 0.8669 - val_loss: 0.2239 - val_categorical_accuracy: 0.9375\n",
       "Epoch 2/20\n",
-      "  7/210 [>.............................] - ETA: 3s - loss: 0.2437 - categorical_accuracy: 0.9330"
+      "  1/210 [..............................] - ETA: 3s - loss: 0.2403 - categorical_accuracy: 0.9297"
      ]
     },
     {
@@ -173,43 +190,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.1986 - categorical_accuracy: 0.9432 - val_loss: 0.1481 - val_categorical_accuracy: 0.9571\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.1856 - categorical_accuracy: 0.9472 - val_loss: 0.1430 - val_categorical_accuracy: 0.9597\n",
       "Epoch 3/20\n",
-      "210/210 [==============================] - 3s 16ms/step - loss: 0.1361 - categorical_accuracy: 0.9606 - val_loss: 0.1144 - val_categorical_accuracy: 0.9668\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.1316 - categorical_accuracy: 0.9614 - val_loss: 0.1154 - val_categorical_accuracy: 0.9662\n",
       "Epoch 4/20\n",
-      "210/210 [==============================] - 3s 16ms/step - loss: 0.1104 - categorical_accuracy: 0.9678 - val_loss: 0.0962 - val_categorical_accuracy: 0.9734\n",
+      "210/210 [==============================] - 3s 16ms/step - loss: 0.1053 - categorical_accuracy: 0.9697 - val_loss: 0.0948 - val_categorical_accuracy: 0.9732\n",
       "Epoch 5/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0933 - categorical_accuracy: 0.9722 - val_loss: 0.0900 - val_categorical_accuracy: 0.9759\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.0880 - categorical_accuracy: 0.9731 - val_loss: 0.0841 - val_categorical_accuracy: 0.9762\n",
       "Epoch 6/20\n",
-      "210/210 [==============================] - 3s 17ms/step - loss: 0.0814 - categorical_accuracy: 0.9750 - val_loss: 0.0801 - val_categorical_accuracy: 0.9783\n",
+      "210/210 [==============================] - 4s 18ms/step - loss: 0.0798 - categorical_accuracy: 0.9751 - val_loss: 0.0776 - val_categorical_accuracy: 0.9774\n",
       "Epoch 7/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0744 - categorical_accuracy: 0.9780 - val_loss: 0.0787 - val_categorical_accuracy: 0.9775\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.0712 - categorical_accuracy: 0.9776 - val_loss: 0.0715 - val_categorical_accuracy: 0.9792\n",
       "Epoch 8/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0679 - categorical_accuracy: 0.9799 - val_loss: 0.0776 - val_categorical_accuracy: 0.9759\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.0631 - categorical_accuracy: 0.9810 - val_loss: 0.0700 - val_categorical_accuracy: 0.9790\n",
       "Epoch 9/20\n",
-      "210/210 [==============================] - 3s 17ms/step - loss: 0.0613 - categorical_accuracy: 0.9809 - val_loss: 0.0694 - val_categorical_accuracy: 0.9807\n",
+      "210/210 [==============================] - 3s 14ms/step - loss: 0.0603 - categorical_accuracy: 0.9813 - val_loss: 0.0671 - val_categorical_accuracy: 0.9811\n",
       "Epoch 10/20\n",
-      "210/210 [==============================] - 3s 16ms/step - loss: 0.0561 - categorical_accuracy: 0.9820 - val_loss: 0.0679 - val_categorical_accuracy: 0.9807\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.0560 - categorical_accuracy: 0.9820 - val_loss: 0.0663 - val_categorical_accuracy: 0.9810\n",
       "Epoch 11/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0527 - categorical_accuracy: 0.9836 - val_loss: 0.0659 - val_categorical_accuracy: 0.9826\n",
+      "210/210 [==============================] - 3s 15ms/step - loss: 0.0522 - categorical_accuracy: 0.9842 - val_loss: 0.0616 - val_categorical_accuracy: 0.9823\n",
       "Epoch 12/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0477 - categorical_accuracy: 0.9849 - val_loss: 0.0651 - val_categorical_accuracy: 0.9804\n",
+      "210/210 [==============================] - 4s 17ms/step - loss: 0.0500 - categorical_accuracy: 0.9844 - val_loss: 0.0629 - val_categorical_accuracy: 0.9798\n",
       "Epoch 13/20\n",
-      "210/210 [==============================] - 3s 17ms/step - loss: 0.0450 - categorical_accuracy: 0.9855 - val_loss: 0.0644 - val_categorical_accuracy: 0.9817\n",
-      "Epoch 14/20\n",
-      "210/210 [==============================] - 3s 17ms/step - loss: 0.0426 - categorical_accuracy: 0.9871 - val_loss: 0.0630 - val_categorical_accuracy: 0.9817\n",
-      "Epoch 15/20\n",
-      "210/210 [==============================] - 3s 17ms/step - loss: 0.0400 - categorical_accuracy: 0.9877 - val_loss: 0.0611 - val_categorical_accuracy: 0.9824\n",
-      "Epoch 16/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0389 - categorical_accuracy: 0.9880 - val_loss: 0.0609 - val_categorical_accuracy: 0.9829\n",
-      "Epoch 17/20\n",
-      "210/210 [==============================] - 4s 17ms/step - loss: 0.0364 - categorical_accuracy: 0.9885 - val_loss: 0.0596 - val_categorical_accuracy: 0.9838\n",
-      "Epoch 18/20\n",
-      "210/210 [==============================] - 3s 17ms/step - loss: 0.0360 - categorical_accuracy: 0.9887 - val_loss: 0.0582 - val_categorical_accuracy: 0.9835\n",
-      "Epoch 19/20\n",
-      "210/210 [==============================] - 3s 16ms/step - loss: 0.0342 - categorical_accuracy: 0.9892 - val_loss: 0.0617 - val_categorical_accuracy: 0.9820\n",
-      "Epoch 20/20\n",
-      "210/210 [==============================] - 3s 16ms/step - loss: 0.0328 - categorical_accuracy: 0.9891 - val_loss: 0.0587 - val_categorical_accuracy: 0.9835\n"
+      "210/210 [==============================] - 4s 17ms/step - loss: 0.0471 - categorical_accuracy: 0.9853 - val_loss: 0.0623 - val_categorical_accuracy: 0.9830\n"
      ]
     }
    ],
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -250,18 +253,18 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_7 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+      " input_1 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
       "                                                                 \n",
-      " conv2d_6 (Conv2D)           (None, 28, 28, 32)        832       \n",
+      " conv2d (Conv2D)             (None, 28, 28, 32)        832       \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPoolin  (None, 14, 14, 32)        0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d (MaxPooling2  (None, 14, 14, 32)        0         \n",
+      " D)                                                              \n",
       "                                                                 \n",
-      " flatten_6 (Flatten)         (None, 6272)              0         \n",
+      " flatten (Flatten)           (None, 6272)              0         \n",
       "                                                                 \n",
-      " dropout_6 (Dropout)         (None, 6272)              0         \n",
+      " dropout (Dropout)           (None, 6272)              0         \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 10)                62730     \n",
+      " dense (Dense)               (None, 10)                62730     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 63562 (248.29 KB)\n",
@@ -277,23 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "263/263 [==============================] - 0s 1ms/step - loss: 0.0513 - categorical_accuracy: 0.9840\n"
+      "263/263 [==============================] - 1s 2ms/step - loss: 0.0611 - categorical_accuracy: 0.9801\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.05126721039414406, 0.9840475916862488]"
+       "[0.061085257679224014, 0.9801190495491028]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,6 +314,27 @@
     "- 0.9783333539962769 karnel(5,5) => (3,3) & padding 'same'\n",
     "- 0.9825000166893005 karnel => (3,3)\n",
     "- 0.9840475916862488 drop 0.2 => 0.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "875/875 [==============================] - 2s 2ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "submit = pd.DataFrame()\n",
+    "submit['ImageId'] = [i for i in range (1,test_data.shape[0]+1)]\n",
+    "submit['Label'] = model.predict(test_data).argmax(axis=1)\n",
+    "\n",
+    "submit.to_csv('/code/mnist/submit.csv',index=False)"
    ]
   }
  ],
